[package]
name = "ripinfo"
version = "0.1.0"
edition = "2021"
description = "ripinfo is a tool to gather ip information using the ipinfo.io API"
license = "MIT"
keywords = ["ip", "ipinfo", "cli", "ping", "whois"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://github.com/Gers2017/ripinfo"
repository = "https://github.com/Gers2017/ripinfo"

[profile.release.build-override]
opt-level = "s"
incremental = true
debug = 0


[dependencies]
anyhow = "1.0.69"
colored_json = "3.0.1"
directories = "4.0.1"
flate2 = "1.0.25"
nom = "7.1.3"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
